--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -4,8 +4,7 @@
 # path to migration scripts
 script_location = migrations
 
-# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
-# Uncomment the line below if you want the files to be prepended with date and time
+# template used to generate migration file names
 # file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
@@ -34,7 +33,7 @@ prepend_sys_path = .
 # sourceless = false
 
 # version number format
-version_num_format = %04d
+version_num_format = 0001
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses
