--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
